[package]
name = "bevy_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2", features = ["wayland"] }

# bevy = { version = "0.17.2" }
bevy_dev_tools = "0.17.2"
bevy_enhanced_input = "0.19.2"
noisy_bevy = "0.11.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
